Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16715

comdlg32 printdlg ANSI via Kompozer, trying to free invalid address

    XMLWordPrintable

Details

    Description

      a follow-up ticket of CORE-16622.
      reported against 0.4.14-dev-1113-g4e26336 gcc dbg:

      Reproduction steps

      • install Kompozer from rapps, it's an application that uses comdlg32:printdlg ANSI
      • in menubar click select "file/print" from menubar

      Expected result
      No logging of

      (sdk/lib/rtl/heap.c:2195) HEAP: Trying to free an invalid address
      

      Observed result
      when it opens the printdlg dialog, it logs

      err:(win32ss/printing/base/winspool/main.c:56) RpcBindingFree failed with status 1702!
      err:(win32ss/printing/base/winspool/main.c:56) RpcBindingFree failed with status 1702!
      err:(win32ss/printing/base/winspool/main.c:56) RpcBindingFree failed with status 1702!
      err:(win32ss/printing/base/winspool/main.c:56) RpcBindingFree failed with status 1702!
      err:(win32ss/printing/base/winspool/main.c:56) RpcBindingFree failed with status 1702!
      err:(win32ss/printing/base/spoolsv/printerdrivers.c:52) _RpcGetPrinterDriver(002359E8, 0, 3, 00000000, 0, 00235A60)
      err:(win32ss/printing/base/spoolsv/printerdrivers.c:52) _RpcGetPrinterDriver(002359E8, 0, 3, 002362AC, 364, 00235968)
      err:(win32ss/printing/base/winspool/main.c:56) RpcBindingFree failed with status 1702!
      fixme:(win32ss/printing/providers/localspl/printers.c:853) Per-user settings are not yet implemented, returning the global DevMode for PRINTER_INFO_9!
      (sdk/lib/rtl/heap.c:2195) HEAP: Trying to free an invalid address 0014CA30!
      err:(win32ss/printing/base/winspool/main.c:56) RpcBindingFree failed with status 1702!
      fixme:(win32ss/printing/providers/localspl/printers.c:853) Per-user settings are not yet implemented, returning the global DevMode for PRINTER_INFO_9!
      (sdk/lib/rtl/heap.c:2195) HEAP: Trying to free an invalid address 0014CA30!
      (win32ss/user/ntuser/nonclient.c:1133) err: Wnd is active and not set active!
      

      and when I click properties button, "nothing happens", and it logs

      err:(win32ss/printing/base/winspool/main.c:56) RpcBindingFree failed with status 1702!
      fixme:(win32ss/printing/providers/localspl/printers.c:853) Per-user settings are not yet implemented, returning the global DevMode for PRINTER_INFO_9!
      fixme:(win32ss/printing/base/winspool/printers.c:340) Merge pDevModeInput with pi9, write back to driver!
      fixme:(win32ss/printing/base/winspool/printers.c:346) Show property sheet!
      (sdk/lib/rtl/heap.c:2195) HEAP: Trying to free an invalid address 0014FEE0!
      

      Attachments

        Issue Links

          Activity

            People

              DougLyons DougLyons
              reactosfanboy reactosfanboy
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: