[WINSPOOL] Properly fix a double free CORE-16715

Addendum to 0.4.14-dev-957-g
d90beaeed26863985486874aaa2a1c3422fd6d9f

Many Thanks to the patches author Doug Lyons!